# stool

./: .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  all_8hpp_source.html  alphabet_8hpp_source.html  annotated.html  annotated_dup.js  array__constructor_8hpp_source.html  backward__isa_8hpp_source.html  basic__search_8hpp_source.html  beller__component_8hpp_source.html  beller__small__component_8hpp_source.html  bit__array__deque_8hpp_source.html  bit__deque_8hpp_source.html  bwt__decompress_8hpp_source.html  bwt__functions_8hpp_source.html  byte_8hpp_source.html  byte__array__deque_8hpp_source.html  byte__vector__functions_8hpp_source.html  char__interval_8hpp_source.html  character__run_8hpp_source.html  circular__bit__pointer_8hpp_source.html  circular__byte__pointer_8hpp_source.html  classes.html  classstool_1_1Alphabet-members.html  classstool_1_1Alphabet.html  classstool_1_1Alphabet_a5e615b161a39231d38a392ad6f9563ea_icgraph.map  classstool_1_1Alphabet_a5e615b161a39231d38a392ad6f9563ea_icgraph.md5  classstool_1_1Alphabet_ab5b80c0ae2dcd5627390db8e3f5b9b49_cgraph.map  classstool_1_1Alphabet_ab5b80c0ae2dcd5627390db8e3f5b9b49_cgraph.md5  classstool_1_1ArrayConstructor-members.html  classstool_1_1ArrayConstructor.html  classstool_1_1ArrayConstructor_a005fd2cc2a469f7ef83941fc5ec95e03_cgraph.map  classstool_1_1ArrayConstructor_a005fd2cc2a469f7ef83941fc5ec95e03_cgraph.md5  classstool_1_1ArrayConstructor_a09e9aace862d4f1dfadb10e8fae60e6b_cgraph.map  classstool_1_1ArrayConstructor_a09e9aace862d4f1dfadb10e8fae60e6b_cgraph.md5  classstool_1_1ArrayConstructor_a3cdb912a99008f464778773640416cc7_cgraph.map  classstool_1_1ArrayConstructor_a3cdb912a99008f464778773640416cc7_cgraph.md5  (+2375 more)
.github/workflows/: doxygen.yml
docs/html/: annotated.html  annotated_dup.js  backward__isa_8hpp_source.html  basic__search_8hpp_source.html  beller__component_8hpp_source.html  beller__interval_8hpp_source.html  bwt__analysis__result_8hpp_source.html  bwt__decompress_8hpp_source.html  bwt__functions_8hpp_source.html  byte_8hpp_source.html  char__interval_8hpp_source.html  classes.html  classstool_1_1_basic_search-members.html  classstool_1_1_basic_search.html  classstool_1_1_byte-members.html  classstool_1_1_byte.html  classstool_1_1_byte_a0c4efbcf87c62b2fbeafbd055cf39ffd_icgraph.map  classstool_1_1_byte_a0c4efbcf87c62b2fbeafbd055cf39ffd_icgraph.md5  classstool_1_1_char_interval.html  (+233 more)
experiment/: CMakeLists.txt  all.sh  delta.sh  download.sh  dsa.sh  dsa_delta.sh  sa.sh
experiment/scripts/: download_pizza_chili_repetitive_corpus.sh
experiment/src/: integer_sketch_main.cpp  rlbwt_main.cpp
include/: all.hpp  byte.hpp  constants.hpp  debug.hpp  delta.hpp  elias_fano_vector.hpp  file_writer.hpp  io.hpp  lcp_interval.hpp  lcp_intervals_builder.hpp  lib.hpp  light_stool.hpp  memory.hpp  message.hpp  online_file_reader.hpp  print.hpp  sa_bwt_lcp.hpp  sa_bwt_lcp_for_string.hpp  sort.hpp  stool.hpp  string_functions.hpp  string_functions_on_sa.hpp  string_generator.hpp  text_statistics.hpp  uint8_vector_generator.hpp  value_array.hpp
lib/: io.cpp  sa_bwt_lcp.cpp  sa_bwt_lcp_for_string.cpp  value_array.cpp
main/: analyze_bwt_main.cpp  analyze_file_main.cpp  beller_main.cpp  build_dsa_main.cpp  build_isa_main.cpp  build_sa_main.cpp  delta_main.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+52 more)
src/: byte.hpp  debug.hpp  elias_fano_vector.hpp  io.cpp  io.h  io.hpp  online_io.hpp  print.hpp  sa_bwt_lcp.cpp  sa_bwt_lcp.hpp  value_array.cpp  value_array.hpp
test/: CMakeLists.txt  deque_test_main.cpp  elias_fano_test_main.cpp  fm_index_test_main.cpp  integer_deque_test.hpp  lcp_interval_test_main.cpp  performance_test_main.cpp  rank_select_test_main.cpp  rmq_test_main.cpp  simple_deque_test.hpp  test_all.sh  test_main.cpp  variable_fixed_array_test_main.cpp  vlc_deque_test.hpp
test/sources/: bit_deque_test_main.cpp  byte_array_deque_main.cpp  dynamic_string_test.hpp  elias_fano_test_main.cpp  faster_static_array_deque_main.cpp  integer_deque_test_main.cpp  lcp_interval_test_main.cpp  naive_array_test_main.cpp  naive_bit_vector_test_main.cpp  naive_flc_vector_test_main.cpp  naive_vlc_array_test_main.cpp  performance_test_main.cpp  rank_select_test_main.cpp  short_bit_vector_test_main.cpp  short_elias_fano_test_main.cpp  short_integer_vector_test_main.cpp  static_array_test_main.cpp  string_test.hpp  variable_fixed_array_test_main.cpp  vlc_array_deque_test_main.cpp
test/sources/develop/: bit_deque_test_main.cpp  byte_array_deque_main.cpp  faster_static_array_deque_main.cpp  naive_vlc_array_test_main.cpp  short_bit_vector_test_main.cpp  short_elias_fano_test_main.cpp  short_integer_vector_test_main.cpp  static_array_test_main.cpp
test/sources/main/: deque_test_main.cpp  elias_fano_test_main.cpp  eytzinger_layout_for_psum_test_main.cpp  fm_index_test_main.cpp  integer_deque_test_main.cpp  integer_sketch_test_main.cpp  lcp_interval_test_main.cpp  lf_test_main.cpp  naive_array_for_faster_psum_test_main.cpp  naive_array_test_main.cpp  naive_bit_vector_test_main.cpp  naive_flc_vector_test_main.cpp  performance_test_main.cpp  rank_select_test_main.cpp  rmq_test_main.cpp  sa_is_test_main.cpp  sa_test_main.cpp  test_main.cpp  variable_fixed_array_test_main.cpp
test/sources/main/specialized_collection/: elias_fano_vector_test_main.cpp  naive_bit_vector_test_main.cpp  naive_flc_vector_test_main.cpp  naive_integer_array_test_main.cpp  simple_deque_test_main.cpp  value_array_test_main.cpp  vlc_deque_test_main.cpp
test/sources/template/: build_test.hpp  dynamic_integer_test.hpp  dynamic_string_test.hpp  load_and_save_test.hpp  query_test.hpp  string_test.hpp  update_test.hpp
(+166 files in other folders)
